--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,7 @@ ul {
 
 .navbar a {
     color: black;
-    padding: 0.45rem;
-    margin: 0 0.25rem;
+    padding: 0.45rem 0;
 }
 .navbar ul {
     display: flex;
@@ -54,7 +53,7 @@ a {
     text-decoration: none;
 }
 .container {
-    max-width: 1300px;
+    max-width: 1200px;
     display: block;
     margin: 0 auto;
 }
@@ -66,6 +65,8 @@ a {
     background-color: #efeae5;
     /* border-radius: 5px;
     box-shadow: 0px 0px 16px 3px #aea9a977; */
+
+    margin-top: 1rem;
 }
 
 .flex {
